[package]
name = "mastodon_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
futures = "0.3.25"
lazy_static = "1.4.0"
prometheus = "0.13.3"
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["full"] }
warp = "0.3.3"
